Sonar: Fikser feil fra sonar (#7044)
* Lagt inn kommentarer i tomme metoder
* Tar i bruk etablerte konstanter
* Oppretter konstanter for tekster som bruker minst 3 steder
* Trekker ut i egne metoder der det er hensiktsmessig
* Renaming av konstanter for å matche definert regex
* Splittet finnPapirSøknad() i to metoder for å unngå å returnere null for Boolean
* Disablet test hvor asserts er kommentert ut midlertidig
* Slettet testfil som ikke hadde noen tester
* Endret til static klasser for LagOppdragTjeneste og KontoerGrunnlagBygger
* get(0)/iterator().next() -> getFirst() i berørte filer