@@ -12,6 +12,8 @@ import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.LockModeType;
 
+import jakarta.persistence.TypedQuery;
+
 import org.hibernate.jpa.HibernateHints;
 import org.hibernate.query.NativeQuery;
 
@@ -49,24 +51,21 @@ public class FagsakRepository {
     }
 
     public Fagsak finnEksaktFagsak(long fagsakId) {
-        var query = entityManager.createQuery("from Fagsak where id=:fagsakId", Fagsak.class);
-        query.setParameter("fagsakId", fagsakId);
+        var query = getFagsakQuery(fagsakId);
         var fagsak = HibernateVerktøy.hentEksaktResultat(query);
         entityManager.refresh(fagsak); // hent alltid på nytt
         return fagsak;
     }
 
     public Fagsak finnEksaktFagsak(Saksnummer saksnummer) {
-        var query = entityManager.createQuery("from Fagsak where saksnummer=:saksnummer", Fagsak.class)
-            .setParameter("saksnummer", saksnummer);
+        var query = getFagsakWhereSaksnummerQuery(saksnummer);
         var fagsak = HibernateVerktøy.hentEksaktResultat(query);
         entityManager.refresh(fagsak); // hent alltid på nytt
         return fagsak;
     }
 
     public Fagsak finnEksaktFagsakReadOnly(long fagsakId) {
-        var query = entityManager.createQuery("from Fagsak where id=:fagsakId", Fagsak.class)
-            .setParameter("fagsakId", fagsakId)
+        var query = getFagsakQuery(fagsakId)
             .setHint(HibernateHints.HINT_READ_ONLY, "true");
         var fagsak = HibernateVerktøy.hentEksaktResultat(query);
         entityManager.refresh(fagsak); // hent alltid på nytt
@@ -74,8 +73,7 @@ public class FagsakRepository {
     }
 
     public Fagsak finnEksaktFagsakReadOnly(Saksnummer saksnummer) {
-        var query = entityManager.createQuery("from Fagsak where saksnummer=:saksnummer", Fagsak.class)
-            .setParameter("saksnummer", saksnummer)
+        var query = getFagsakWhereSaksnummerQuery(saksnummer)
             .setHint(HibernateHints.HINT_READ_ONLY, "true");
         var fagsak = HibernateVerktøy.hentEksaktResultat(query);
         entityManager.refresh(fagsak); // hent alltid på nytt
@@ -83,8 +81,7 @@ public class FagsakRepository {
     }
 
     public Optional<Fagsak> finnUnikFagsak(long fagsakId) {
-        var query = entityManager.createQuery("from Fagsak where id=:fagsakId", Fagsak.class);
-        query.setParameter("fagsakId", fagsakId);
+        var query = getFagsakQuery(fagsakId);
         var opt = HibernateVerktøy.hentUniktResultat(query);
         if (opt.isPresent()) {
             entityManager.refresh(opt.get());
@@ -113,19 +110,18 @@ public class FagsakRepository {
                 Journalpost.class);
         query.setParameter("journalpost", journalpostId);
         var journalposter = query.getResultList();
-        return journalposter.isEmpty() ? Optional.empty() : Optional.ofNullable(journalposter.get(0));
+        return journalposter.isEmpty() ? Optional.empty() : Optional.ofNullable(journalposter.getFirst());
     }
 
     public Optional<Fagsak> hentSakGittSaksnummer(Saksnummer saksnummer) {
-        var query = entityManager.createQuery("from Fagsak where saksnummer=:saksnummer", Fagsak.class);
-        query.setParameter("saksnummer", saksnummer);
+        var query = getFagsakWhereSaksnummerQuery(saksnummer);
 
         var fagsaker = query.getResultList();
         if (fagsaker.size() > 1) {
             throw flereEnnEnFagsakFeil(saksnummer);
         }
 
-        return fagsaker.isEmpty() ? Optional.empty() : Optional.of(fagsaker.get(0));
+        return fagsaker.isEmpty() ? Optional.empty() : Optional.of(fagsaker.getFirst());
     }
 
     private TekniskException flereEnnEnFagsakFeil(Saksnummer saksnummer) {
@@ -174,8 +170,7 @@ public class FagsakRepository {
     }
 
     public Optional<Fagsak> hentSakGittSaksnummer(Saksnummer saksnummer, boolean taSkriveLås) {
-        var query = entityManager.createQuery("from Fagsak where saksnummer=:saksnummer", Fagsak.class);
-        query.setParameter("saksnummer", saksnummer);
+        var query = getFagsakWhereSaksnummerQuery(saksnummer);
         if (taSkriveLås) {
             query.setLockMode(LockModeType.PESSIMISTIC_WRITE);
         }
@@ -185,7 +180,7 @@ public class FagsakRepository {
             throw flereEnnEnFagsakFeil(saksnummer);
         }
 
-        return fagsaker.isEmpty() ? Optional.empty() : Optional.of(fagsaker.get(0));
+        return fagsaker.isEmpty() ? Optional.empty() : Optional.of(fagsaker.getFirst());
     }
 
     public Long lagre(Journalpost journalpost) {
@@ -292,4 +287,13 @@ public class FagsakRepository {
         return query.getResultList();
     }
 
+    private TypedQuery<Fagsak> getFagsakQuery(long fagsakId) {
+        var query = entityManager.createQuery("from Fagsak where id=:fagsakId", Fagsak.class);
+        query.setParameter("fagsakId", fagsakId);
+        return query;
+    }
+
+    private TypedQuery<Fagsak> getFagsakWhereSaksnummerQuery(Saksnummer saksnummer) {
+        return entityManager.createQuery("from Fagsak where saksnummer=:saksnummer", Fagsak.class).setParameter( "saksnummer", saksnummer);
+    }
 }
